# PerfTrack

./: .gitignore  Checkpoint #1  Checkpoint #2  GUI  PTbugList.txt  README.md  install.sh  load_ld.sh  ubuntu.sh
add col/: data_access.cpp(modified)  pcreate.sql(modified)
benchmarks/2d_image_processing/: 2d_img_processing.c  run_scenarios.txt
benchmarks/2d_image_processing/2d_img_processing_Reports/: 2d_img_processing_16384.txt  2d_img_processing_16384_app.txt  2d_img_processing_2048.txt  2d_img_processing_2048_app.txt  2d_img_processing_4096.txt  2d_img_processing_4096_app.txt  2d_img_processing_8192.txt  2d_img_processing_8192_app.txt
benchmarks/Benchmark2-XML-reports/: benchmark2_3000_500000.xml  benchmark2_3500_500000.xml  benchmark2_5000_500000.xml
benchmarks/blocked_multiplication/: blocked.c  run_scenarios.txt
benchmarks/blocked_multiplication/blocked_Reports/: blocked_multiplication_1000_200.txt  blocked_multiplication_1000_200_app.txt  blocked_multiplication_1500_500.txt  blocked_multiplication_1500_500_app.txt  blocked_multiplication_3000_1500.txt  blocked_multiplication_3000_1500_app.txt  blocked_multiplication_3000_300.txt  blocked_multiplication_3000_300_app.txt
benchmarks/float_multiplication/: matrixMult_float.c  multOMP_float.c  run_scenarios.txt
benchmarks/float_multiplication/float_multiplication_Reports/: matrixMult_float_1000_1000.txt  matrixMult_float_1000_1000app.txt  matrixMult_float_100_100.txt  matrixMult_float_100_100app.txt  matrixMult_float_1500_1500.txt  matrixMult_float_1500_1500app.txt  matrixMult_float_2000_2000.txt  matrixMult_float_2000_2000app.txt  multOMP_float_1000_1000.txt  multOMP_float_1000_1000app.txt  multOMP_float_100_100.txt  multOMP_float_100_100app.txt  multOMP_float_1500_1500.txt  multOMP_float_1500_1500app.txt  multOMP_float_2000_2000.txt  multOMP_float_2000_2000app.txt
benchmarks/int_multiplication/: matrixMult_int.c  multOMP_int.c  run_scenarios.txt
benchmarks/int_multiplication/int_multiplication_Reports/: matrixMult_int_1000_1000.txt  matrixMult_int_1000_1000app.txt  matrixMult_int_1500_1500.txt  matrixMult_int_1500_1500app.txt  matrixMult_int_2100_2100.txt  matrixMult_int_2100_2100app.txt  matrixMult_int_2500_2500.txt  (+9 more)
benchmarks/random_access_multiplication/: matrixMult_random.c  multOMP_random.c  run_scenarios.txt
benchmarks/unblocked_multiplication/: run_benchmarks.sh  run_scenarios.txt  un_blocked.c
db_admin/mysql/: mcreate.sql  mdropall.sql
db_admin/oracle/: create.sql  dropall.sql
db_admin/postgres/: complex_perf_result_update.sql  expected_val_update.sql  pcreate.EV.sql  pcreate.sql  pdropall.sql  pgrant.sql
docs/: PerfTrackUsersGuide.doc  PerfTrackUsersGuide2_0-3.doc  Testcases_Getdata.docx
etc/: MachineChars.txt  PTdefaultMachines.ptdf
scripts/: env.py  install-dependencies-el.sh  install-dependencies-ubuntu.sh  install-dependencies.sh  run_tests.py
share/: PERIiMDL.cfg  PTdefaultFocusFramework.ptdf  dataCenterResourceHierarchyExtensions.ptdf  iMDL.cfg
src/: CMakeLists.txt  build.sh  perftrack.pth.in
src/CMake/Modules/: FindLibPython.py  FindPythonLibrary.cmake  PythonCompile.py  PythonMacros.cmake
src/GUI/: .ptoperators  CMakeLists.txt  PTLICENSE  TODO  addparam32x32.xpm  attributedialog.cpp  attributedialog.h  attributedialog.ui  attributedialog.ui.h  attributequeryicon16x16.xpm  baseOps.py  build.sh  chart_viewer.cpp  chart_viewer.h  chart_viewer_base.cpp  chart_viewer_base.h  chart_viewer_base.ui  column_data_dialog.cpp  column_data_dialog.h  column_data_dialog_base.cpp  column_data_dialog_base.h  column_data_dialog_base.ui  comb_perfRes_widget.cpp  comb_perfRes_widget.h  comb_perfRes_widget_base.cpp  comb_perfRes_widget_base.h  comb_perfRes_widget_base.ui  combine_perfReses_dialog.cpp  combine_perfReses_dialog.h  combine_perfReses_dialog_base.cpp  combine_perfReses_dialog_base.h  combine_perfReses_dialog_base.ui  constraint_list_item.h  context.h  data_access.cpp  data_access.h  data_dialog_base.ui  data_filter_dialog.cpp  data_filter_dialog.h  data_filter_dialog_base.cpp  (+77 more)
src/dataStore/: CMakeLists.txt  PTds.py  lru_cache.py  ptPyDBAPI.py  ptdfParser.py  ptdf_entry.py  ptdf_multi.py
src/data_collection/: Application.py  AttrVal.py  Build.py  CMakeLists.txt  Execution.py  Hardware.py  PERIxml.py  PERIxmlGen.py  PTcommon.py  PTdFgen.py  PTexception.py  ParseOprof.py  PassFail.py  PerfResult.py  Resource.py  ResourceIndex.py  Run.py  makefile  parseMilc.py  parsePerf.py  parsePurple.py  ptGo.py  run_oprofile.py  sys2machine.py  systemScan.py  toolParser.py
src/data_collection/machine/: gmLogger.py  gm_hs_tools.py  iMDL.py  nwice.iMDL.cfg  pt_nwice_proc.py  pt_proc.py  pt_xt4_proc.py  ptdf.py  ruby.iMDL.cfg
src/data_collection/run/: filesystem.py  ptCNLfix.py  ptrun.py  submission.py
src/reports/: getExecNameValues.py  getMachinesAndAttributes.py
tests/: PTdFgenTester.py  PTdS_test1.py  PTdS_test2.py  PTdS_test3.py  PTdS_test4.py  PTdS_test5.py  PTdS_test6.py  PTdS_test7.py  PTdS_test8.py  PTdS_testsCall.py  PTdataStore_PTpyDBAPItester.py  combPRtest.py  hardwareTester.py  nwice.ptdf  ptdfClassesTester.py  testPTdataStore.py  test_orderParams.py
tests/GUI/: GUItest-Instructions.txt
tests/PTdFgenTestData/: .#irs-good-reference.ptdf  PTrunIndex.txt  PTrunIndex.txt.1  PTrunIndex.txt.10  PTrunIndex.txt.11  PTrunIndex.txt.12  PTrunIndex.txt.13  PTrunIndex.txt.14  PTrunIndex.txt.15  PTrunIndex.txt.16  PTrunIndex.txt.17  PTrunIndex.txt.18  PTrunIndex.txt.19  PTrunIndex.txt.2  PTrunIndex.txt.20  PTrunIndex.txt.21  PTrunIndex.txt.22  PTrunIndex.txt.23  PTrunIndex.txt.24  PTrunIndex.txt.25  PTrunIndex.txt.26  PTrunIndex.txt.27  PTrunIndex.txt.28  PTrunIndex.txt.29  PTrunIndex.txt.3  PTrunIndex.txt.30  PTrunIndex.txt.31  PTrunIndex.txt.32  PTrunIndex.txt.33  PTrunIndex.txt.5  PTrunIndex.txt.6  PTrunIndex.txt.7  PTrunIndex.txt.8  PTrunIndex.txt.9  README  copyDataFiles.py  irs-1.bld  irs-1.tmr  irs-10.bld  irs-11.run  (+60 more)
tests/badMachineFiles/: MachineChars.1  MachineChars.2  MachineChars.3  MachineChars.4
tests/oprofile/: oprofile.xml
tests/system_details/: SystemDetails.csv
(+64 files in other folders)
